added price connector and other bug fixes
